# confi

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
gromacs_workflow/: generate_samples.py
gromacs_workflow/config/: general_config.yml
gromacs_workflow/workflow/: snakefile
gromacs_workflow/workflow/scripts/: create_datafile.py  render_jinja2.py
lammps_workflow/results/moltemplate/1_m/: system.data  system.lt
lammps_workflow/results/moltemplate/2_m/: system.data  system.lt
lammps_workflow/results/moltemplate/4_m/: system.lt
lammps_workflow/results/packmol/1_m/: packmol.inp  system.xyz
lammps_workflow/results/packmol/2_m/: packmol.inp  system.xyz
lammps_workflow/workflow/: snakefile
resources/moltemplate/: fe_ions.lt  mg_ions.lt
resources/packmol/: fe.xyz  fe_cl.xyz  fe_cl2.xyz  mg.xyz  packmol_template.inp
resources/packmol/opc/: opc_water.xyz
resources/packmol/opc3/: opc3_water.xyz
resources/packmol/tip4p_2005/: tip4p_2005_water.xyz
snmk_workflow/workflow/: snakefile
snmk_workflow/workflow/scripts/: create_datafile.py  render_jinja2_template.py  render_moltemplate.py  render_packmol.py
src/confi/: __init__.py  cli.py  io.py  misc.py  parameters.py  render.py
src/confi/templates/: moltemplate_template.inp  packmol_template.inp
tests/: conftest.py  test_cli.py  test_convert_data.py  test_data_to_g96.py  test_input_render.py  test_interconversions.py  test_render_gromacs_inp.py  test_render_gromacs_pdb.py  test_render_gromacs_xyz.py  test_render_lammps_inp.py
tests/resources/: system.data
(+7 files in other folders)
